--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@ A determined, versatile, and adept Civil Engineer seeking to utilize my knowledg
     </div>
     
     <div class="educationDate">
-        <div class="educationcontainer2">
+        <div class="educationcontainer2"></div>
         <i>Espana,Manila</i><br>
         <i>May 2015</i>
     </div>
 </div>
-</div>
+
 
 <div class="additionalInfomation">
     ADDITIONAL INFORMATION
@@ -104,5 +104,6 @@ A determined, versatile, and adept Civil Engineer seeking to utilize my knowledg
     </ul>
   </div>
 </div>
+
 </body>
 </html>
